# PracticeProjects

./: README.md
.github/workflows/: blank.yml
Tetris/: Documentation.tex  Makefile  tetris.c  tetris.h
Tetris/Engine/: library.c  library.h
Tetris/Gui/: tetrisGUI.c  tetrisGUI.h
Tetris/Tests/: libTests.c  libTests.h
containers/: Description.md  Makefile  s21_containers.h
containers/s21_map/: s21_map.cpp  s21_map.h
containers/s21_set/: s21_set.cpp  s21_set.h
containers/s21_tree/: s21_tree.cpp  s21_tree.h
containers/tests/: alltests.cpp  alltests.h  maptests.cpp  settests.cpp
matrixcpp/: CMakeLists.txt  Description.md  Makefile  s21_matrix_oop.cpp  s21_matrix_oop.h  s21_matrix_tests.cpp
